Only parse JDK 11 if source version is 11. (#2895)
Also added jtreg test that are only run with JDK 11.

This fixes #2878, but there is no way to pass the annotated JDK if the JDK version is 11, but --release 8 is used.