@@ -275,6 +275,13 @@ List<String> getJavaFilesToFormat(projectName) {
         }
     }
 
+    // Collect all java files in jtreg directory
+    fileTree("${project(projectName).projectDir}/jtregJdk11").visit { details ->
+        if (!details.path.contains("nullness-javac-errors") && details.name.endsWith('java')) {
+            javaFiles.add(details.file)
+        }
+    }
+
     List<String> args = new ArrayList<>();
     for (File f : javaFiles) {
         args += f.absolutePath
@@ -637,6 +644,7 @@ subprojects {
                                     // uses the jdk.jdeps module.
                                     "-javacoptions:--add-modules jdk.jdeps",
                                     "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                             ]
                         }
                         if (project.name.is('framework')) {
@@ -758,6 +766,9 @@ subprojects {
             }
 
             if (project.name.is('checker')) {
+                if (!isJava8) {
+                    tasks += ['jtregJdk11Tests']
+                }
                 tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
             }
         }
